--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ code {
     monospace;
 }
 
+.container {
+  background: #e9e9e9;
+}
+
 .title {
   text-align: center;
   background-color: #02a871;
